--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -7,4 +7,8 @@
   </PropertyGroup>
 
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.12" />
+  </ItemGroup>
+
 </Project>
