--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,9 +7,12 @@
 
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.12" />
   </ItemGroup>
+
+
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
