--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.12" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.12" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0"/>
         <PackageReference Include="Moq" Version="4.20.69" />
@@ -30,5 +31,9 @@
       <ProjectReference Include="..\API\API.csproj" />
       <ProjectReference Include="..\Application\Application.csproj" />
     </ItemGroup>
+
+
+
+
 
 </Project>
